# input-action-controller

./: .gitignore  LICENSE  PKGBUILD  README.md  config.example.toml  pyproject.toml  renovate.json  requirements-ci.txt
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  device-discovery.md  maintaining.md
docs/examples/: dsnote-gnome-wayland.md  handy-gnome-wayland.md
packaging/: input-action-controller.service
scripts/: makepkg  public-release  update-aur-package  verify-artifacts
src/input_action_controller/: actions.py  cli.py  config.py  daemon.py  diagnostics.py  locking.py  models.py  runner.py
src/input_action_controller/devices/: __init__.py  base.py  classifiers.py  discovery.py  evdev.py  hidraw.py  manager.py  matchers.py
src/input_action_controller/setup/: __init__.py  actions.py  capture.py  config_editor.py  devices.py  permissions.py  profiles.py  prompts.py  service.py  session.py
tests/: test_actions.py  test_ci.py  test_cli.py  test_config.py  test_daemon.py  test_device_manager.py  test_discovery.py  test_documentation.py  test_locking.py  test_matchers.py  test_packaging.py  test_public_release.py  test_runner.py  test_setup_actions.py  test_setup_capture.py  test_setup_config.py  test_setup_devices.py  test_setup_permissions.py  test_setup_profiles.py  test_setup_prompts.py  test_setup_service.py  test_setup_session.py  test_sources.py
tests/helpers/: command_tree.py  setup.py
